fix: поправил CLI

--- a/.github/workflows/vault-rotate-app-token.yml
+++ b/.github/workflows/vault-rotate-app-token.yml
@@ -2,14 +2,20 @@
 # SPDX-License-Identifier: MIT
 name: Rotate Vault App Token
 
+# Циклический запуск: каждый день (0 часов)
 on:
   schedule:
-    - cron: "0 */8 * * *"   # Каждые 8 часов
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
+# Для корректной работы через GitHub Actions вам нужно в интерфейсе
+# репозитория дать GITHUB_TOKEN право "secrets: write" (Settings → Actions → General → Workflow permissions).
+# Но в этом YAML мы не указываем `permissions: secrets: write`, чтобы 'act' не падал на неизвестное поле.
 permissions:
   contents: read
-  secrets: write
+  id-token: write
+  # ПРАВА СЕКРЕТОВ ДЛЯ GITHUB: пишем их явно в настройках репозитория,
+  # а не в YAML. Это гарантирует совместимость с 'act'.
 
 jobs:
   rotate-token:
@@ -20,10 +26,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Ensure Vault credentials are available
+      - name: Verify Vault credentials (skip if отсутствуют)
         run: |
-          if [ -z "${VAULT_ADDR}" ] || [ -z "${VAULT_TOKEN}" ]; then
-            echo "❌ VAULT_ADDR или VAULT_TOKEN не установлены, пропускаем ротацию."
+          if [ -z "${VAULT_ADDR:-}" ] || [ -z "${VAULT_TOKEN:-}" ]; then
+            echo "⚠️ VAULT_ADDR или VAULT_TOKEN не заданы — пропускаем ротацию."
             exit 0
           fi
 
@@ -32,45 +38,48 @@ jobs:
         run: |
           set -e
           echo "🔐 Ротация токена в Vault..."
-          NEW_TOKEN=$(curl --silent \
-            --header "X-Vault-Token: ${{ secrets.VAULT_TOKEN }}" \
-            --request POST \
-            --data '{"policies":["app-policy"],"ttl":"8h"}' \
-            ${{ secrets.VAULT_ADDR }}/v1/auth/token/create \
-            | jq -r .auth.client_token)
+          NEW_TOKEN=$(
+            curl --silent \
+              --header "X-Vault-Token: ${{ secrets.VAULT_TOKEN }}" \
+              --request POST \
+              --data '{"policies":["app-policy"],"ttl":"24h"}' \
+              ${{ secrets.VAULT_ADDR }}/v1/auth/token/create \
+              | jq -r .auth.client_token
+          )
           if [ -z "$NEW_TOKEN" ] || [ "$NEW_TOKEN" == "null" ]; then
             echo "❌ Не удалось получить новый токен."
             exit 1
           fi
-          echo "Новый токен получен."
+          echo "✅ Новый токен получен."
           echo "::set-output name=new_token::$NEW_TOKEN"
 
-      - name: Fetch GitHub public key for encrypting secret
-        id: getkey
+      - name: Fetch GitHub public key (для шифрования секрета)
+        id: get_pubkey
         uses: actions/github-script@v7
         with:
           script: |
-            const publicKey = await github.actions.getPublicKeyForRepo({
+            const { data: publicKeyData } = await github.actions.getPublicKeyForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo
             });
-            return publicKey.data;
+            return publicKeyData;
 
-      - name: Encrypt new token
+      - name: Encrypt new token with GitHub public key
         id: encrypt
         run: |
-          echo "${{ steps.getkey.output.key }}" | base64 --decode > public.key
-          NEW_TOKEN="${{ steps.request_token.outputs.new_token }}"
-          ENCRYPTED=$(openssl rsautl -encrypt -pubin -inkey public.key -oaep -in <(echo -n "$NEW_TOKEN") | base64)
-          echo "::set-output name=encrypted_value::$ENCRYPTED"
-          echo "::set-output name=key_id::$(jq -r .key_id <<< '${{ steps.getkey.output }}')"
+          echo "${{ steps.get_pubkey.outputs.key }}" | base64 --decode > public.key
+          PLAINTEXT="${{ steps.request_token.outputs.new_token }}"
+          CIPHERTEXT=$(echo -n "$PLAINTEXT" | \
+            openssl rsautl -encrypt -pubin -inkey public.key -oaep | base64)
+          echo "::set-output name=encrypted_value::$CIPHERTEXT"
+          echo "::set-output name=key_id::$(jq -r .key_id <<< '${{ steps.get_pubkey.outputs }}')"
 
       - name: Update GitHub Secret VAULT_APP_TOKEN
         uses: actions/github-script@v7
         with:
           script: |
-            const keyId = `${{ steps.encrypt.outputs.key_id }}`;
-            const encryptedValue = `${{ steps.encrypt.outputs.encrypted_value }}`;
+            const keyId = '${{ steps.encrypt.outputs.key_id }}';
+            const encryptedValue = '${{ steps.encrypt.outputs.encrypted_value }}';
             await github.actions.createOrUpdateRepoSecret({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -78,10 +87,12 @@ jobs:
               encrypted_value: encryptedValue,
               key_id: keyId
             });
+            console.log("✅ GitHub Secret VAULT_APP_TOKEN обновлён.");
 
-      - name: Revoke old Vault token (опционально)
-        if: ${{ always() }}
+      - name: (Опционально) Revoke old Vault token
+        if: always()
         run: |
-          # Если требуется — можно отозвать старый токен здесь.
-          # Например: curl --header "X-Vault-Token: ${{ secrets.VAULT_TOKEN }}" --request POST ${{ secrets.VAULT_ADDR }}/v1/auth/token/revoke-self
-          echo "Старая версия токена может быть отозвана по мере необходимости."
+          echo "ℹ️ Если требуется, здесь можно отозвать старый токен: "
+          echo "  curl --header \"X-Vault-Token: ${{ secrets.VAULT_TOKEN }}\" \\"
+          echo "       --request POST ${{ secrets.VAULT_ADDR }}/v1/auth/token/revoke-self"
+          # Закомментировано, т.к. ревокировать старый токен можно вручную или отдельным шагом.
