--- a/.github/workflows/trivy-critical-scan.yml
+++ b/.github/workflows/trivy-critical-scan.yml
@@ -13,20 +13,22 @@ permissions:
   security-events: write
 
 jobs:
-  trivy-scan:
+  sbom-trivy-grype:
     name: SBOM & Trivy/Grype Scan
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Set up job
         uses: actions/checkout@v4
 
       - name: Install Syft (SBOM generation)
         run: |
+          echo "🛠 Устанавливаем Syft для генерации SBOM..."
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
 
       - name: Generate SBOM in CycloneDX JSON
         run: |
+          echo "📦 Генерируем SBOM..."
           set -e
           syft . -o cyclonedx-json=sbom.json
 
@@ -39,19 +41,23 @@ jobs:
 
       - name: Install Grype for SBOM scan
         run: |
+          echo "🔍 Устанавливаем Grype для сканирования SBOM..."
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
 
-      - name: Run Grype scan against SBOM (fail on ≥ MEDIUM)
+      - name: Run Grype scan against SBOM (fail on ≥ CRITICAL)
         run: |
+          echo "🔍 Запускаем Grype (падать только при 'Critical')..."
           set -e
-          grype sbom:sbom.json --fail-on medium
+          grype sbom:sbom.json --fail-on critical
 
       - name: Install Trivy
         run: |
+          echo "🛡 Устанавливаем Trivy..."
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.45.0
 
-      - name: Run Trivy filesystem scan (CRITICAL,HIGH)
+      - name: Run Trivy filesystem scan (CRITICAL, HIGH)
         run: |
+          echo "🔍 Запускаем Trivy filesystem scan (CRITICAL, HIGH)..."
           set -e
           trivy fs --exit-code 1 --severity CRITICAL,HIGH --format json --output trivy-report.json .
 
